# exchange

api/: Cargo.toml
api/src/: main.rs
api/src/middlewares/: auth.rs
api/src/redis/: redis_manager.rs
api/src/routes/: auth.rs  depth.rs  mod.rs  order.rs
api/src/types/: auth.rs  mod.rs  redis.rs
api/src/utils/: mod.rs  web_utils.rs
db/: .env  Cargo.toml  diesel.toml
db/migrations/2025-02-23-102931_create_users/: up.sql
db/migrations/2025-03-02-223746_orders/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
engine/: Cargo.toml
engine/src/: main.rs
engine/src/redis/: redis_manager.rs
engine/src/trade/: engine.rs  orderbook.rs
engine/src/types/: api.rs  mod.rs  trades.rs  ws.rs
ws/: Cargo.toml
ws/src/: main.rs
ws/src/classes/: mod.rs  subscription_manager.rs  user.rs  user_manager.rs
