[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
db = { path = "../db" }
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = "0.4.39"
uuid = { version = "1.0", features = ["v4", "serde"] }
