[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
