[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.3"
rand = "0.8"
redis = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.0", features = ["full", "macros"] }
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }
