[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3"
futures-util = "0.3.31"
log = "0.4.26"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.29.1"
once_cell = "1.20.3"
rand = "0.8"
